fix(carousel): add spacing between project carousel and nav arrows
The prev/next arrow icons were offset -45px from the carousel edge,
which wasn't enough clearance from their containing column and left
them overlapping the carousel image with no visible gap, making them
easy to miss. Increased the offset to -75px.

--- a/sass/tooplate-style.scss
+++ b/sass/tooplate-style.scss
@@ -437,13 +437,13 @@ b, strong {
 		.owl-prev {
 			&:before {
 				content: '\e833';
-  				left: -45px; 
+  				left: -75px;
 			}
 		}
 		.owl-next {
 			&:before {
 				content: '\e836';
-  				right: -45px; 
+  				right: -75px;
 			}
 		}
 	}
